* made fully responsive * added stats * fixed clipping on outermost time zones * fade in members after image has fully loaded * fixes for layout shifts

--- a/team-feed/styles.css
+++ b/team-feed/styles.css
@@ -1,14 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=optional');
 
 :root {
-    --footer-height: 100px;
-    --section-header-height: 30px;
-    --lfg-outer-container-padding: 25px;
-    --timezones: 25;
+    --footer-height: 8em;
+    --section-header-height: 2em;
+    --lfg-outer-container-padding: 1em;
     --lfg-column-gap: 6.5em;
+    --timezone-width: 4%;
 }
 
-body, html {
+html {
+    font-size: 16pt;
+}
+
+body {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -19,6 +23,12 @@ body, html {
     background-color: rgb(38, 38, 38);
     font-family: 'Share Tech Mono', monospace;
     color: #F0B7B1;
+    container: bodyContainer / size;
+}
+
+#preloadContainer {
+    opacity: 0;
+    transition: opacity 0.25s linear;
 }
 
 main {
@@ -38,26 +48,18 @@ main {
     display: none; /* for Chrome, Safari, and Opera */
 }
 
-section .teamsSidebar,
-section .soloContainer {
-    flex: 0 1 auto;
-}
-
-section .lfgContainer {
-    flex: 1 1 auto;
-}
-
 main section header {
-    flex: 0 0 auto;
+    /*!*flex: 0 0 auto;*!*/
     width: 100%;
     height: var(--section-header-height);
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.5em;
     padding: 10px 0 0 0;
 }
 
 .infoIcon {
     display: inline;
+    font-size: 0.8em;
 }
 
 .infoPanel {
@@ -65,7 +67,7 @@ main section header {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #999;
-    font-size: 1rem;
+    font-size: 0.75rem;
     z-index: 10;
     max-width: 25%;
     background: rgb(0,0,0);
@@ -79,7 +81,7 @@ main section header {
 }
 
 .teamsSidebar {
-    flex: 0 1 auto;
+    min-width: 12em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,10 +89,10 @@ main section header {
 }
 
 .teamsInnerContainer {
-    padding: 25px 15px;
     display: flex;
+    padding: 0.75em;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1em;
 }
 
 /* container for a single team */
@@ -98,17 +100,17 @@ main section header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: 1em;
     border-radius: 8px;
     border: 1px solid #666;
-    padding: 10px 10px 20px 10px;
+    padding: 0.5em;
 }
 
 .teamContainer header {
-    text-align: center;
-    font-size: 1.0rem;
+    font-size: 1.25em;
+    height: auto;
+    padding: 0;
 }
-
 
 .lfgContainer {
     flex: 1 1 auto;
@@ -134,16 +136,13 @@ main section header {
     height: 100%;
     display: flex;
     flex-direction: row;
-    padding: var(--lfg-outer-container-padding);
     position: relative;
-    container: lfgInnerContainer / size;
 }
 
 .timeZoneLines,
 .unassignedMembers {
     position: absolute;
-    top: var(--lfg-outer-container-padding);
-    left: var(--lfg-outer-container-padding);
+    padding: var(--lfg-outer-container-padding);
     display: flex;
     flex-direction: row;
     width: calc(100% - (var(--lfg-outer-container-padding) * 2));
@@ -151,38 +150,41 @@ main section header {
 }
 
 .lfgMemberColumn {
-    width: calc(100% / var(--timezones));
-    min-width: calc(100% / var(--timezones));
-    max-width: calc(100% / var(--timezones));
+    width: var(--timezone-width);
+    min-width: var(--timezone-width);
+    max-width: var(--timezone-width);
     display: flex;
     flex-direction: column;
     gap: var(--lfg-column-gap);
 }
 
-.timeZoneLines {
-    border: 1px dashed rgba(255, 255, 255, 0.1);
-}
-
 .timeZoneBar {
+    border-top: 1px dashed rgba(255, 255, 255, 0.1);
     border-right: 1px dashed rgba(255, 255, 255, 0.1);
-    width: calc(100% / var(--timezones));
+    border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
+    width: var(--timezone-width);
     height: 100%;
 }
 
+.timeZoneBar:first-child {
+    border-left: 1px dashed rgba(255, 255, 255, 0.1);
+}
+
 .soloContainer {
-    flex: 0 1 auto;
+    /*flex: 1 1 auto;*/
+    min-width: 10em;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1em;
     align-items: center;
     background-color: #222;
 }
 
 .soloInnerContainer {
-    padding: 20px;
+    padding: 1em;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1em;
 }
 
 .teamMemberContainer {
@@ -190,14 +192,15 @@ main section header {
     flex-direction: column;
     align-items: center;
     gap: 4px;
-    width: auto;
+    opacity: 0;
+    transition: opacity 0.5s linear;
 }
 
 .teamMemberImage {
-    width: 100%;
-    min-width: 24px;
+    width: 90%;
+    min-width: 12px;
     border-radius: 50%;
-    border: 2px solid #333;
+    border: 2px solid rgba(0, 0, 0, 0);
 }
 
 .teamMemberImage:hover {
@@ -209,9 +212,9 @@ main section header {
 
 .teamsSidebar .teamMemberImage,
 .soloContainer .teamMemberImage,
-.codeJamManagers .teamMemberImage
+#codeJamManagers .teamMemberImage
 {
-    max-width: 40px;
+    max-width: 3.3em;
 }
 
 .teamMemberName {
@@ -220,70 +223,26 @@ main section header {
     cursor: default;
 }
 
-.teamContainer, .soloContainer, .codeJamManagers {
-    font-size: 0.8rem;
-}
-
-@container lfgInnerContainer (width <= 600px)  {
-    .lfgMemberColumn {
-        font-size: 0.5rem;
-    }
-    .teamMemberName {
-        text-overflow: ellipsis;
-        max-width: 40px;
-    }
-}
-
-@container lfgInnerContainer (width > 600px) and (width <= 700px) {
-    .lfgMemberColumn {
-        font-size: 0.5rem;
-    }
-}
-
-@container lfgInnerContainer (width > 700px) and (width <= 900px) {
-    .lfgMemberColumn {
-        font-size: 0.6rem;
-    }
-}
-@container lfgInnerContainer (width > 900px) and (width <= 1100px) {
-    .lfgMemberColumn {
-        font-size: 0.7rem;
-    }
-}
-
-@container lfgInnerContainer (width > 1100px) and (width <= 1300px) {
-    .lfgMemberColumn {
-        font-size: 0.8rem;
-    }
-}
-
-@container lfgInnerContainer (width > 1300px) and (width <= 1500px) {
-    .lfgMemberColumn {
-        font-size: 0.9rem;
-    }
-}
-
-@container lfgInnerContainer (width > 1500px) and (width <= 1700px) {
-    .lfgMemberColumn {
-        font-size: 1.0rem;
-    }
-}
-
-@container lfgInnerContainer (width > 1700px) {
-    .lfgMemberColumn {
-        font-size: 1.25rem;
-    }
-}
-
-.codeJamManagers {
+body footer {
     display: flex;
     flex-direction: row;
-    gap: 4rem;
-    height: var(--footer-height);
+    width: 100vw;
     background-color: #181818;
+    height: var(--footer-height);
+    border-top: 1px solid #666;
+}
+
+#codeJamManagers {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: row;
+    gap: 4em;
     padding-left: 30px;
     align-items: center;
-    border-top: 1px solid #666;
+}
+
+#stats {
+
 }
 
 #memberInfoPopup {
@@ -297,7 +256,7 @@ main section header {
     background: linear-gradient(352deg, rgba(0,0,0,1) 0%, rgba(84,84,84,1) 100%);
     color: #F0B7B1;
     width: auto;
-    padding: 1rem;
+    padding: 1em;
     font-size: small;
     font-weight: lighter;
     border-radius: 10px;
@@ -306,7 +265,7 @@ main section header {
 }
 
 #memberInfoPopupHeader {
-    font-size: 1.25rem;
+    font-size: 1.25em;
 }
 
 #memberInfoPopup summary {
@@ -329,6 +288,17 @@ main section header {
 
 #memberLanguages ul {
     padding: 0 1rem;
-    margin: 0.25rem;
+    margin: 0.1rem;
 }
 
+#stats {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    padding: 1em 20px;
+}
+
+.stat {
+    font-size: 1.2em;
+}
